# webserv

./: Makefile  README  README.md  TODO  perl_script.pl  php.ini  sample_conf
config_files/: alt_config.config  gopher++.config
config_files/invalid_files/: config  invalid_location_block.config  invalid_nested_server.config  invalid_no_port.config  invalid_no_server.config  invalid_no_server_name.config  invalid_opening_statement.config  invalid_port_in_location.config  invalid_syntax_block1.config  invalid_syntax_block2.config  invalid_unclosed_block.config
config_files/valid_files/: basic_file.config  double_socket.config  multiple_servers.config  multiple_servers2.config  only_one.config  only_one_multiple_locations2.config  server_no_locations.config  small_basic_file.config  two_servers.config  youpibanane.config
error_pages/: 404.html  405.html  500.html
http_root/: post_demo.html
http_root/se/: index.html
include/: gopher++.h
src/: CMakeLists.txt  config_main.cpp  gopher++.cpp  main.cpp
src/config_parser/: Block.cpp  Block.hpp  ConfigFile.cpp  ConfigFile.hpp  LocationBlock.cpp  LocationBlock.hpp  ServerBlock.cpp  ServerBlock.hpp  utils.cpp  utils.hpp
src/playground/: delete_me
src/server/: CGI.cpp  CGI.hpp  Client.cpp  Client.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  SocketMonitor.cpp  SocketMonitor.hpp
src/server/sample_web_page/: handle_form.php  index.html  index2.html
src/server/upload_test/: index.html  test.php  upload.php
src/utils/: Logger.cpp  Logger.hpp  LoggerStream.cpp  LoggerStream.hpp
(+9 files in other folders)
